--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -31,7 +31,7 @@
       <!-- main div's -->
       <section>
           <div class="hero__container-title">
-              <h1>Projects</h1>
+              <h1>Projescts</h1>
           </div>
         </section>
       </header>
