--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/styles.css"">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../Styles/styles.css">
     <link rel="shortcut icon" href="./Src/Images/favicon.ico" type="image/x-icon">
     <title>Storm creations - projects</title>
 </head>
@@ -31,7 +32,7 @@
       <!-- main div's -->
       <section>
           <div class="hero__container-title">
-              <h1>Projescts</h1>
+              <h1>Projects</h1>
           </div>
         </section>
       </header>
