--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Styles/styles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Styles/styles.css">
     <link rel="shortcut icon" href="./Src/Images/favicon.ico" type="image/x-icon">
     <title>Storm creations portfolio</title>
 </head>
@@ -37,8 +37,14 @@
             <a href="./index.html"><img src="./Src/Images/Logos/Dummy logo.png" alt="site logo"></a> 
             <h1>Web developer & <br> Game developer generalist</h1>
           </div>
-            <img class="hero__container-sideImage" src="./Src/Images/Dummy image.png" alt="">
+
+      <div class="hero__container-sideImage-container">
+      
+      </div>
+   
         </div>
+
+        
       </section>
     </header>
 
@@ -70,8 +76,8 @@
     </main>
 
     <footer>
+      <div class="divider"> </div>
       <div class="footer"> 
-        <div class="divider"> </div>
         <div id="footer__edge"></div>
         <H2>Footer</H2>
       </div>
