--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -111,9 +111,10 @@
           </div>
           
         </div>
-
         </section>
 
+        <!-- navigation buttons -->
+        <div class="slim__divider"> </div>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <div class="btn-group" role="group" aria-label="First group">
             <button type="button" class="btn btn-primary">1</button>
