--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -17,8 +17,8 @@
           <ul>
               <li><a href="../index.html"> Home </a></li>
               <li><a href="../Pages/projects.html"> Projects </a></li>
-              <li><a href="./about-me.html"> About me </a></li>
-              <li><a href="./blog.html"> Blog </a></li>
+              <li><a href="../Pages/about-me.html"> About me </a></li>
+              <li><a href="../Pages/blog.html"> Blog </a></li>
               <li><a href="../Pages/contact.html"> Contact </a></li>
           </ul>
          </nav>
