--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="navbar__container"> 
        <nav class="navbar__elements">
         <ul>
-            <li><a href="./index.html"> Home </a></li>
-            <li><a href="./Pages/projects.html"> Projects </a></li>
+            <li><a href="../index.html"> Home </a></li>
+            <li><a href="../Pages/projects.html"> Projects </a></li>
             <li><a href="../Pages/about-me.html"> About me </a></li>
             <li><a href="../Pages/blog.html"> Blog </a></li>
             <li><a href="../Pages/contact.html"> Contact </a></li>
