modified landing page texts and added working buttons

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="divider"> </div>
       <section class="centered__container-text">
         <h2>Welcome</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt voluptatibus fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque dolorem optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit corporis doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis nulla sunt.</p>
+        <p>Hello there newcomer, welcome to my personal website and blog, here you will be able to take a look at my current portfolio projects and also you will know a bit more about me. I also have a blog here where I post game development and web development content regularly.</p>
       </section>
 
 <div class="divider"> </div>
@@ -60,8 +60,12 @@
       </section>
         
       <section class="centered__container-text">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam delectus excepturi quos quod nemo voluptatibus debitis mollitia accusamus in, aspernatur expedita quo aliquid deserunt aliquam placeat pariatur repudiandae eaque praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt voluptatibus fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque dolorem optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit corporis doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis nulla sunt.</p>
-        <button type="button" class="redirection__button"> More about me</button>
+        <p> I am a hobbiest game developer with over 6+ years of experience on the subject aimed to provide amazing 3D experiences mainly for desktop platforms using the latest
+           technologies available on the market, specially those that can be considered revolutionary;
+           In addition to that, I am currently learning full stack web development where I have 
+           already done some exciting and unique projects focused on E-commerce also with a responsive design that works fantastic 
+          on mobile platforms.<br> If you wish to learn more about me, click the button below </p>
+          <a href="./Pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
       </section>
 
       <div class="divider"> </div>
@@ -81,17 +85,18 @@
         </div>
       <section class="centered__container-text">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam delectus excepturi quos quod nemo voluptatibus debitis mollitia accusamus in, aspernatur expedita quo aliquid deserunt aliquam placeat pariatur repudiandae eaque praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt voluptatibus fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque dolorem optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit corporis doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis nulla sunt.</p>
+        <a href="./Pages/projects.html"><button type="button" class="redirection__button"> My projects </button></a>
       </section>
 
       <!-- CV section -->
       <div class="divider"> </div>
 
       <section class="leftAligned__section">
-      <h2> CV </h2>
+      <h2> Contact </h2>
       </section>
 
       <section class="centered__container-text">
-        <p>If any of my previous projects caught your atention and you are looking to hire me, feel free to download my CV here</p>
+        <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to be redirected to the contact page</p>
       </section>
     </main>
 
