replaced most of dummy images and adjusted responsiveness on some pages

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -31,9 +31,11 @@
       <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
 
     </nav>
-    <!-- main div's -->
+
+    <!-- hero title and image -->
     <section>
-      <div class="hero__container-title">
+      <div class="hero__container-image">
+        <img src="../Src/Images/DMR render.png" alt="">
         <h1>Contact</h1>
       </div>
     </section>
@@ -53,9 +55,8 @@
     <!-- contact form  -->
     <section class="contact__form-container">
       <div class="contact__form-logo">
-        <img src="../Src/Images/Dummy image.png" alt="site logo">
+        <img src="../Src/Images/Logos/Dummy logo.png" alt="site logo">
       </div>
-
 
       <div class="contact__form-div">
         <div class="contact__form-wrapper">
