--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
         </div>
 
         <!--side image carousel-->
-        <div class="hero__container-sideImage-container">
-          <div class="carousel slide h-100" data-bs-ride="carousel">
+        <div class="hero__container-sideImage-container mt-5">
+          <div class="carousel-fade slide h-100" data-bs-ride="carousel">
             <div class="carousel-inner h-100">
 
               <div class="carousel-item active h-100">
-                <img src="./Src/Images/Dummy image.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/DMR render.png" class="h-100 w-100" alt="...">
               </div>
               <div class="carousel-item h-100">
-                <img src="./Src/Images/profile-picture.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/AR render.png" class="h-100 w-100" alt="...">
+              </div>
+              <div class="carousel-item h-100">
+                <img src="./Src/Images/tamales don alberto snapshot.png" class="h-100 w-100" alt="...">
+              </div>
+              <div class="carousel-item h-100">
+                <img src="./Src/Images/vehicle physics portrait.png" class="h-100 w-100" alt="...">
+              </div>
+              <div class="carousel-item h-100">
+                <img src="./Src/Images/SMG UV render.png" class="h-100 w-100" alt="...">
               </div>
             </div>
           </div>
@@ -94,7 +103,6 @@
       <h2> Skills </h2>
     </section>
 
-    
     <div class="app__icons-grid">
       <img src="./Src/Images/Logos/Unity logo.png" alt="Unity logo">
       <img src="./Src/Images/Logos/Ue-logo.png" alt="Unreal engine logo">
@@ -127,6 +135,7 @@
       <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to
         be
         redirected to the contact page</p>
+      <a href="./Pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
     </section>
   </main>
 
