--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -30,9 +30,10 @@
       <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
 
     </nav>
-    <!-- main div's -->
+    <!-- hero title and image -->
     <section>
-      <div class="hero__container-title">
+      <div class="hero__container-image">
+        <img src="../Src/Images/Minecraft project render.png" alt="">
         <h1>Blog</h1>
       </div>
     </section>
@@ -55,7 +56,7 @@
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/9999</p>
+          <p>9/09/<span>9999<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -73,7 +74,7 @@
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/9999</p>
+          <p>9/09/<span>9999<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -91,7 +92,7 @@
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/9999</p>
+          <p>9/09/<span>9999<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -109,7 +110,7 @@
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/9999</p>
+          <p>9/09/<span>9999<span></p>
         </div>
 
         <div class="blog__grid-element-description">
