--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -30,51 +30,22 @@
       <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
 
     </nav>
-    <!-- main div's -->
+
+    <!-- hero title and image -->
     <section>
-      <div class="hero__container-title">
+      <div class="hero__container-image">
+        <img src="../Src/Images/SMG UV render.png" alt="">
         <h1>Projects</h1>
       </div>
     </section>
   </header>
 
   <main>
+
     <div class="divider"> </div>
 
     <!-- section 1 -->
-    <section class="leftAligned__text">
-      <h2> Unreal Engine </h2>
-    </section>
 
-    <section class="centered__container-text">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat a, deleniti magnam aspernatur eveniet alias,
-        consequatur placeat cum distinctio unde mollitia, temporibus iste obcaecati illo tempore eaque odit labore aut.
-      </p>
-    </section>
-
-    <div class="projects__grid">
-
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Shield shader </p>
-      </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Thermal vision shader </p>
-      </div>
-
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Thermal vision shader </p>
-      </div>
-
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Directional damage <br>indicator</p>
-      </div>
-
-
-    </div>
-
-    <div class="divider"> </div>
-
-    <!-- section 2 -->
     <section class="leftAligned__text">
       <h2> Unity3D </h2>
     </section>
@@ -86,32 +57,69 @@
 
 
     <div class="projects__grid">
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/AI battle camp.gif" alt="project thumbnail">
         <p> AI battle camp</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Project description</p>
+      <div class="projects__grid-image-container"><img src="../Src/Images/Energy Sword shader.gif"
+          alt="project thumbnail">
+        <p> Energy sword shader</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Project description</p>
+      <div class="projects__grid-image-container"><img src="../Src/Images/vehicle physics portrait.png"
+          alt="project thumbnail">
+        <p> Vehicle physics simulator</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Minecraft like <br> Voxel generation</p>
+      <div class="projects__grid-image-container"><img src="../Src/Images/Minecraft project render.png"
+          alt="project thumbnail">
+        <p> Minecraft like Voxel generation</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/Bullet tracking effect.gif"
+          alt="project thumbnail">
         <p> Bullet tracking </p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Project description</p>
+      <div class="projects__grid-image-container"><img src="../Src/Images/Laser shader.gif" alt="project thumbnail">
+        <p> Laser shader</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/water depth shader render.png"
+          alt="project thumbnail">
         <p> Water depth shader</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/Energy shield shader render.png"
+          alt="project thumbnail">
         <p> Energy shield shader</p>
       </div>
     </div>
 
+    <div class="divider"> </div>
+
+    <!-- section 2 -->
+    <section class="leftAligned__text">
+      <h2> Unreal Engine </h2>
+    </section>
+
+    <section class="centered__container-text">
+      <p>Miscelaneous projects made in Unreal Engine 4 and 5.
+      </p>
+    </section>
+
+    <div class="projects__grid">
+
+      <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+        <p> Shield shader </p>
+      </div>
+      <div class="projects__grid-image-container"><img src="../Src/Images/volumetric clouds shader.PNG"
+          alt="project thumbnail">
+        <p> Volumetric clouds shader</p>
+      </div>
+
+      <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+        <p> Thermal vision shader </p>
+      </div>
+
+      <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+        <p> Directional damage indicator</p>
+      </div>
+
+    </div>
 
     <div class="divider"> </div>
 
@@ -127,21 +135,20 @@
 
     <div class="projects__grid">
 
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/SMG render.png" alt="project thumbnail">
         <p> Halo custom SMG</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/AR render.png" alt="project thumbnail">
         <p> Halo custom assault rifle</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/BR render.png" alt="project thumbnail">
         <p> Halo custom battle rifle</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/DMR render.png" alt="project thumbnail">
         <p> Halo custom DMR</p>
       </div>
 
     </div>
-
 
     <div class="divider"> </div>
 
@@ -150,23 +157,24 @@
       <h2> Wordpress </h2>
     </section>
     <section class="centered__container-text">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas neque reprehenderit rerum, incidunt consectetur
-        animi. Nulla consequuntur, sapiente commodi magnam ut fugit, provident aliquam ad minima sed quidem iste!
-        Quibusdam.</p>
+      <p> Websites made using elementor and Wordpress, fully responsive designs; Some sites feature
+        custom shop implementations using PHP, javascript and css. </p>
     </section>
 
     <div class="projects__grid">
 
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-        <p> Ipdlz - customizable grip <br> bands</p>
+      <div class="projects__grid-image-container"><img src="../Src/Images/ipdlz snapshot.png" alt="project thumbnail">
+        <p> Ipdlz - customizable grip bands</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/clo company snapshot.png"
+          alt="project thumbnail">
         <p> C.L.O Company</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/getback snapshot.png" alt="project thumbnail">
         <p> Getback</p>
       </div>
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/tamales don alberto snapshot.png"
+          alt="project thumbnail">
         <p> Tamales Don Alberto</p>
       </div>
 
@@ -185,10 +193,10 @@
     </section>
 
     <div class="projects__grid">
-      <div><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+      <div class="projects__grid-image-container"><img src="../Src/Images/custom pickleballs snapshot.png"
+          alt="project thumbnail">
         <p> Custom Pickleball Bands</p>
       </div>
-
     </div>
 
   </main>
