--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Styles/styles.css">
-  <link rel="shortcut icon" href="./Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../Src/Images/favicon.ico" type="image/x-icon">
   <title>Storm creations - about me</title>
 </head>
 
@@ -40,34 +40,8 @@
     </section>
   </header>
 
-
   <main>
-
-    <!-- profile description section, no bootstrap -->
-
-    <!--
-    <section>
-      <div class="profile__container">
-
-        <div class="profile__container-image">
-          <img src="../Src/Images/profile-picture.png" alt="profile picture">
-        </div>
-
-        <div class="profile__description-div">
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta tempora architecto blanditiis atque ducimus
-            natus, qui dignissimos repellendus maiores quaerat minima. Totam ipsum quaerat vel error maiores. Nam,
-            voluptas distinctio!</p>
-  
-        </div>
-
-      </div>
-
-    </section>
-
-  -->
-
     <div class="divider"> </div>
-
 
     <div class="leftAligned__text">
       <h2 id="name"> My profile </h2>
