--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Styles/styles.css">
-  <link rel="shortcut icon" href="./Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../Src/Images/favicon.ico" type="image/x-icon">
   <title>Storm creations - projects</title>
 </head>
 
@@ -50,11 +50,8 @@
       <h2> Unity3D </h2>
     </section>
     <section class="centered__container-text">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas neque reprehenderit rerum, incidunt consectetur
-        animi. Nulla consequuntur, sapiente commodi magnam ut fugit, provident aliquam ad minima sed quidem iste!
-        Quibusdam.</p>
+      <p> 3D projects made in Unity, featuring the vast usage of shaders for effects and some unique mechanics </p>
     </section>
-
 
     <div class="projects__grid">
       <div class="projects__grid-image-container"><img src="../Src/Images/AI battle camp.gif" alt="project thumbnail">
@@ -102,7 +99,6 @@
     </section>
 
     <div class="projects__grid">
-
       <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
         <p> Shield shader </p>
       </div>
