--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
+      <img class="navbar__mobile-burgerMenu" src="./Src/Icons/burger-menu.svg" alt="">
 
     </nav>
 
