fixed favicon urls, added menu burger, updated alt text for images

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -28,7 +28,7 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
 
     </nav>
 
@@ -64,14 +64,14 @@
             <h2>Contact info</h2>
             <form action="none">
               <input type="text" name="name" id="" placeholder="Name">
-              <input type="email" name="mail" id="" placeholder="E-mail">
+              <input type="email" name="email" id="" placeholder="E-mail">
               <textarea name="" id="" placeholder="Type here"></textarea>
             </form>
           </div>
         </div>
-
       </div>
     </section>
+
   </main>
 
   <footer>
