--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -27,7 +27,7 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Dummy image.png" alt="">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
 
     </nav>
 
