--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="./Src/Icons/burger-menu.svg" alt="">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
 
     </nav>
 
@@ -45,19 +45,19 @@
             <div class="carousel-inner h-100">
 
               <div class="carousel-item active h-100">
-                <img src="./Src/Images/DMR render.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/DMR render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
               <div class="carousel-item h-100">
-                <img src="./Src/Images/AR render.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/AR render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
               <div class="carousel-item h-100">
-                <img src="./Src/Images/tamales don alberto snapshot.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/tamales don alberto snapshot.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
               <div class="carousel-item h-100">
-                <img src="./Src/Images/vehicle physics portrait.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/vehicle physics portrait.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
               <div class="carousel-item h-100">
-                <img src="./Src/Images/SMG UV render.png" class="h-100 w-100" alt="...">
+                <img src="./Src/Images/SMG UV render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
             </div>
           </div>
