Updated trademark logos

--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
     </section>
 
     <div class="app__icons-grid">
-      <img src="./Src/Images/Logos/Unity logo.png" alt="Unity logo">
-      <img src="./Src/Images/Logos/Ue-logo.png" alt="Unreal engine logo">
-      <img src="./Src/Images/Logos/Wordpress logo.png" alt="Wordpress logo">
+      <img src="./Src/Images/Logos/U_Logo_Small_White_RGB_1C.png" alt="Unity logo">
+      <img src="./Src/Images/Logos/UE_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
+      <img src="./Src/Images/Logos/WordPress-logotype-alternative-white.png" alt="Wordpress logo">
       <img src="./Src/Images/Logos/Blender logo.png" alt="Blender logo">
-      <img src="./Src/Images/Dummy image.png" alt="Dummy logo">
-      <img src="./Src/Images/Dummy image.png" alt="Dummy logo">
+
     </div>
     <section class="centered__container-text">
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam delectus excepturi quos quod nemo voluptatibus
