Updated semantic tags and increazed html readability

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -29,12 +29,13 @@
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
       <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
-
     </nav>
+
     <!-- hero title and image -->
+    
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Code snippet.png" alt="">
+        <img src="../Src/Images/Code snippet.png" alt="Hero image">
         <h1>About me</h1>
       </div>
     </section>
@@ -48,6 +49,7 @@
     </div>
 
     <!-- bootstrap profile description container -->
+
     <section class="container text-center">
       <div class="row mt-5 mb-5">
         <div class="col-md mt-5">
