--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -29,13 +29,12 @@
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
       <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
-
     </nav>
 
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/DMR render.png" alt="">
+        <img src="../Src/Images/DMR render.png" alt="Hero image">
         <h1>Contact</h1>
       </div>
     </section>
@@ -49,7 +48,7 @@
         fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque dolorem optio!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit corporis doloremque
         doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis nulla sunt.
-      </p>
+      </p> 
     </section>
 
     <!-- contact form  -->
