--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
       <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
-
     </nav>
 
-    <!-- Hero -->
+    <!-- Hero primary image -->
     <section>
       <div class="hero__container">
         <div class="hero__logo-container">
@@ -39,7 +38,7 @@
           <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
         </div>
 
-        <!--side image carousel-->
+        <!--Hero secondary image bootstrap carousel-->
         <div class="hero__container-sideImage-container mt-5">
           <div class="carousel-fade slide h-100" data-bs-ride="carousel">
             <div class="carousel-inner h-100">
@@ -47,29 +46,35 @@
               <div class="carousel-item active h-100">
                 <img src="./Src/Images/DMR render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
+
               <div class="carousel-item h-100">
                 <img src="./Src/Images/AR render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
+
               <div class="carousel-item h-100">
                 <img src="./Src/Images/tamales don alberto snapshot.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
+
               <div class="carousel-item h-100">
                 <img src="./Src/Images/vehicle physics portrait.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
+
               <div class="carousel-item h-100">
                 <img src="./Src/Images/SMG UV render.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
+              
             </div>
           </div>
         </div>
-
       </div>
     </section>
   </header>
 
   <!-- content -->
   <main>
+
     <div class="divider"> </div>
+
     <section class="centered__container-text">
       <h2>Welcome</h2>
       <p>Hello there newcomer, welcome to my personal website and blog, here you will be able to take a look at my
@@ -81,61 +86,72 @@
     <div class="divider"> </div>
 
     <!-- About me section -->
-    <section class="leftAligned__text">
-      <h2> Who am I? </h2>
-    </section>
 
-    <section class="centered__container-text">
-      <p> I am a hobbiest game developer with over 6+ years of experience on the subject aimed to provide amazing 3D
-        experiences mainly for desktop platforms using the latest
-        technologies available on the market, specially those that can be considered revolutionary;
-        In addition to that, I am currently learning full stack web development where I have
-        already done some exciting and unique projects focused on e-commerce also with a responsive design that works
-        fantastic
-        on mobile platforms.<br> If you wish to learn more about me, click the button below </p>
-      <a href="./Pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
+    <section>
+      <div class="leftAligned__text">
+        <h2> Who am I? </h2>
+      </div>
+
+      <div class="centered__container-text">
+        <p> I am a hobbiest game developer with over 6+ years of experience on the subject aimed to provide amazing 3D
+          experiences mainly for desktop platforms using the latest
+          technologies available on the market, specially those that can be considered revolutionary;
+          In addition to that, I am currently learning full stack web development where I have
+          already done some exciting and unique projects focused on e-commerce also with a responsive design that works
+          fantastic
+          on mobile platforms.<br> If you wish to learn more about me, click the button below </p>
+        <a href="./Pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
+      </div>
     </section>
 
     <div class="divider"> </div>
 
     <!-- Skills section -->
-    <section class="leftAligned__text">
-      <h2> Skills </h2>
+
+    <section>
+      <div class="leftAligned__text">
+        <h2> Skills </h2>
+      </div>
+
+      <div class="app__icons-grid">
+        <img src="./Src/Images/Logos/U_Logo_Small_White_RGB_1C.png" alt="Unity logo">
+        <img src="./Src/Images/Logos/UE_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
+        <img src="./Src/Images/Logos/WordPress-logotype-alternative-white.png" alt="Wordpress logo">
+        <img src="./Src/Images/Logos/Blender logo.png" alt="Blender logo">
+      </div>
+
+      <div class="centered__container-text">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam delectus excepturi quos quod nemo
+          voluptatibus
+          debitis mollitia accusamus in, aspernatur expedita quo aliquid deserunt aliquam placeat pariatur repudiandae
+          eaque
+          praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt
+          voluptatibus fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque
+          dolorem optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit
+          corporis
+          doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis
+          nulla sunt.</p>
+        <a href="./Pages/projects.html"><button type="button" class="redirection__button"> My projects </button></a>
+      </div>
     </section>
 
-    <div class="app__icons-grid">
-      <img src="./Src/Images/Logos/U_Logo_Small_White_RGB_1C.png" alt="Unity logo">
-      <img src="./Src/Images/Logos/UE_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
-      <img src="./Src/Images/Logos/WordPress-logotype-alternative-white.png" alt="Wordpress logo">
-      <img src="./Src/Images/Logos/Blender logo.png" alt="Blender logo">
+    <!-- Contact section -->
 
-    </div>
-    <section class="centered__container-text">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam delectus excepturi quos quod nemo voluptatibus
-        debitis mollitia accusamus in, aspernatur expedita quo aliquid deserunt aliquam placeat pariatur repudiandae
-        eaque
-        praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt
-        voluptatibus fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque
-        dolorem optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit
-        corporis
-        doloremque doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis
-        nulla sunt.</p>
-      <a href="./Pages/projects.html"><button type="button" class="redirection__button"> My projects </button></a>
-    </section>
-
-    <!-- CV section -->
     <div class="divider"> </div>
 
-    <section class="leftAligned__text">
-      <h2> Contact </h2>
+    <section>
+      <div class="leftAligned__text">
+        <h2> Contact </h2>
+      </div>
+
+      <div class="centered__container-text">
+        <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to
+          be
+          redirected to the contact page</p>
+        <a href="./Pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
+      </div>
     </section>
 
-    <section class="centered__container-text">
-      <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to
-        be
-        redirected to the contact page</p>
-      <a href="./Pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
-    </section>
   </main>
 
   <footer>
