--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -28,12 +28,12 @@
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
       <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
-
     </nav>
+
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Minecraft project render.png" alt="">
+        <img src="../Src/Images/Minecraft project render.png" alt="Hero image">
         <h1>Blog</h1>
       </div>
     </section>
@@ -45,9 +45,9 @@
 
     <!-- Title -->
 
-    <section class="leftAligned__text">
+    <div class="leftAligned__text">
       <h2> Latest entries </h2>
-    </section>
+    </div>
 
     <!-- blog entries -->
 
@@ -56,7 +56,7 @@
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/<span>9999<span></p>
+          <p>01/01/<span>2023<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -71,10 +71,11 @@
       <div class="slim__divider"> </div>
 
       <!-- post 2 -->
+
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/<span>9999<span></p>
+          <p>01/01/<span>2023<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -89,10 +90,11 @@
       <div class="slim__divider"> </div>
 
       <!-- post 3 -->
+
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/<span>9999<span></p>
+          <p>01/01/<span>2023<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -107,10 +109,11 @@
       <div class="slim__divider"> </div>
 
       <!-- post 4 -->
+
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
           <img src="../Src/Images/Dummy image.png" alt="blog entry image">
-          <p>9/09/<span>9999<span></p>
+          <p>01/01/<span>2023<span></p>
         </div>
 
         <div class="blog__grid-element-description">
@@ -123,8 +126,10 @@
       </div>
     </section>
 
-    <!-- navigation buttons -->
     <div class="slim__divider"> </div>
+
+  <!-- bootstrap navigation buttons -->
+
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
       <div class="btn-group" role="group" aria-label="First group">
         <button type="button" class="btn btn-primary">1</button>
@@ -136,8 +141,8 @@
       </div>
     </div>
 
-
   </main>
+
   <footer>
     <div class="divider"> </div>
     <div class="footer">
@@ -145,6 +150,8 @@
       <H2>Footer</H2>
     </div>
   </footer>
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
